<?xml version="1.0"?>
<package>
  <name>hiwr_touchscreen</name>
  <version>1.0.0</version>
  <description>The touchscreen handler package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="simon.lopez@worldline.com">slopez</maintainer>

  <license>Apache V2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>controller</build_depend>
  <build_depend>hyve_msg</build_depend>
  <run_depend>hyve_msg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>controller</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
